[gd_scene load_steps=8 format=2]

[ext_resource path="res://TheBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fightgui.tscn" type="PackedScene" id=3]
[ext_resource path="res://Commander.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Proyectil.tscn" type="PackedScene" id=5]
[ext_resource path="res://Spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Fightscene.gd" type="Script" id=7]

[node name="Fightscene" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 168 )

[node name="TheBox" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 160 )
scale = Vector2( 1, 1 )
scale_time = 0.5

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 633.036, 346.845 )
scale = Vector2( 0.571428, 0.571428 )
speed = 100.0

[node name="Commander" type="Node2D" parent="."]
script = ExtResource( 4 )
Projectile1 = ExtResource( 5 )

[node name="Spawner0" parent="Commander" instance=ExtResource( 6 )]
position = Vector2( 448, 216 )

[node name="Spawner1" parent="Commander" instance=ExtResource( 6 )]

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="GUI" parent="." instance=ExtResource( 3 )]
margin_right = 1024.0
margin_bottom = 600.0
[connection signal="timeout" from="TurnTimer" to="." method="Start_Player_Turn"]
